add web to the project

--- a/src/Catfact.Api/appsettings.json
+++ b/src/Catfact.Api/appsettings.json
@@ -7,8 +7,5 @@
             "Microsoft.EntityFrameworkCore.Infrastructure": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "app": {
-        "name": "Catfact Api"
-    }
+    "AllowedHosts": "*"
 }
