--- a/src/Catfact.Api/appsettings.json
+++ b/src/Catfact.Api/appsettings.json
@@ -7,5 +7,6 @@
             "Microsoft.EntityFrameworkCore.Infrastructure": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "BaseAddress": "https://catfact.ninja"
 }
